# weave

./: .coderabbit.yaml  .fixit.toml  .gitattributes  .gitignore  .gitmodules  .graphqlrc  .pre-commit-config.yaml  00 Tutorial - Data versioning.ipynb  01 Tutorial - Operations.ipynb  02 Tutorial - Creating ops.ipynb  04 Tutorial - Publishing Data and Ops.ipynb  404.html  AGENTS.md  ARCHITECTURE.md  AUDIO_DATAFLOW.md  BACKFILL_FRAMEWORK_IMPLEMENTATION_TODO.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Closures.ipynb  CodeScorer.md  Controlled v uncontrolled components.ipynb  DEVELOPMENT.md  DOCS.md  Debugging.ipynb  Distribution.ipynb  Distribution2.ipynb  Dockerfile  Dockerfile.test  Dockerfile.windows  Embeddings.ipynb  End to end.ipynb  Eval Board Syn.ipynb  Eval Board.ipynb  Eval.ipynb  Exploration.ipynb  ExploringLLMs.ipynb  LC.ipynb  LICENSE  LLMs.ipynb  (+132 more)
eden-server/: README.md  pyproject.toml  requirements.txt  setup.py
eden-server/src/: cli.py  server.py
eden-server/src/eden/: __init__.py  cli.py  server.py
eden-server/src/eden_server/: cli.py  server.py
eden-server/tests/: test_server.py
in_memory_trace_server/: README.md  pyproject.toml
in_memory_trace_server/src/in_memory_trace_server/: __init__.py  __main__.py  client.py  in_memory_server.py  main.py  subprocess_server.py
lib/claude_code_exporter/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
lib/claude_code_exporter/.claude-plugin/: plugin.json
lib/claude_code_exporter/hooks/: hooks.json
lib/claude_code_exporter/scripts/: __init__.py  config.py  hook_handler.py  state_manager.py  weave_tracer.py
weave_query/: .gitignore  Dockerfile  Dockerfile.ci.test  MANIFEST.in  Makefile  README.md  __init__.py  build_dist.py  clear_cache.py  conftest.py  make_class_diagram.sh  mypy.ini  pyproject.toml  pytest.ini  requirements.legacy.datadog.txt  requirements.legacy.dev.txt  requirements.legacy.ecosystem.txt  requirements.legacy.engine.txt  requirements.legacy.test.txt  requirements.legacy.txt  setup.py  version.py  weave_server.py
weave_query/.devcontainer/: devcontainer.json  postCreateCommand.sh
weave_query/dev_docs/: DEVELOPMENT.md
weave_query/docker/: docker_build.py
weave_query/examples/: get_started.ipynb
weave_query/examples/apps/: explore_embeddings.ipynb
weave_query/examples/experimental/: AutoBoard.ipynb  Monitor.ipynb  MonitorPanelPlot.ipynb  Mutations.ipynb  Table Summary Panel.ipynb  bert_viz.ipynb  composite_histograms.ipynb  dir_browsing.ipynb  ecosystem.ipynb  huggingface_datasets.ipynb  huggingface_models.ipynb  image_gen_craiyon.ipynb  image_gen_ops.ipynb  layout_panels.ipynb  llm_monitor_helper.ipynb  mnist_train.ipynb  object_version_compare.ipynb  old_openai_monitoring.ipynb  openai_monitoring.ipynb  spacy_demo.ipynb  table_data_passing.ipynb  tag_search.ipynb
weave_query/examples/prompts/: FEEDBACK_SPRINT.md
weave_query/examples/reference/: WB_API.ipynb  basic_weave_types.ipynb  confusion_matrix.ipynb  create_ops.ipynb  create_plots_ui_guide.ipynb  markdown.ipynb
weave_query/frontend/: bundle.sh
weave_query/internal_tools/: Module deps viz.ipynb  generate_notebook_tests.py
weave_query/notebooks/: Embeddings.ipynb  Eval Board Syn.ipynb  Eval Board.ipynb  Text Extraction Eval.ipynb
weave_query/perf_notebooks/: pyarrow joinall.ipynb
weave_query/scripts/: auth_modes.sh  build_frontend.sh  build_test_container.sh  clear_cache.py  dd_weave_server_replay.sh  pytest_parallel.sh  syndata.py  syndata_mon.py  wandb_artifact_perf.py  weave_server.sh  weave_server_replay.sh  weave_server_test.sh
weave_query/testdata/: cereal.csv  cereal.db  obj.table.json  sqlite_cereal.sql  sqlite_make_cereal.sh  train.py
weave_query/tests/: example_wb_unit_test.py  fixture_fakewandb.py  test_access.py  test_api.py  test_arrow.py  test_arrow_awl.py  test_arrow_concat.py  test_arrow_perf.py  test_arrow_topy.py  test_arrow_vectorizer.py  test_artifact.py  test_artifact_download_url.py  test_artifact_metadata.py  test_assign_perf.py  test_assignment.py  test_async.py  test_async_queue.py  test_basic_ops.py  test_box.py  test_cache.py  test_codify.py  test_compile.py  test_complex_calls.py  test_cond.py  test_const_type_mapper.py  test_custom_types.py  test_datetime_timestamp.py  test_decorator_type.py  test_decorators.py  test_derive_op.py  test_dispatch.py  test_examples.py  test_execute.py  test_execute_fast.py  test_execution_graphs.py  test_file.py  test_filesystem.py  test_gql_to_weave.py  test_graph.py  test_graph_debug.py  (+72 more)
weave_query/tests/ops_arrow/: test_boolean.py  test_string.py
weave_query/tests/ops_primitives/: test_boolean.py  test_number.py
weave_query/tests/util/: concrete_tagged_value.py  geom.py  list_arrow_test_helpers.py  op_specs.py  tag_test_util.py  weavejs_ops.py
weave_query/weave_query/: __init__.py  _dict_utils.py  api.py  arrow_util.py  artifact_base.py  artifact_fs.py  artifact_local.py  artifact_mem.py  artifact_wandb.py  async_demo.py  async_queue.py  box.py  cache.py  client.py  codifiable_value_mixin.py  codify.py  compile.py  compile_domain.py  compile_table.py  constants.py  context.py  context_state.py  debug.py  debug_compile.py  debug_types.py  decorator_arrow_op.py  decorator_class.py  decorator_mutation.py  decorator_op.py  decorator_type.py  decorator_type.pyi  decorators.py  derive_op.py  dispatch.py  eager.py  engine_trace.py  environment.py  execute.py  execute_fast.py  file_base.py  (+81 more)
weave_query/weave_query/arrow/: arrow.py  arrow_tags.py  concat.py  constructors.py  convert.py  list_.py
weave_query/weave_query/core_types/: __init__.py  stream_table_type.py
weave_query/weave_query/ecosystem/: __init__.py  all.py  root.py  test_notebook_ecosystem_executions.py  torch_mnist_model_example.py
weave_query/weave_query/frontend/: build.sh  consentAwareAnalyticsInjector.js  core_version  index.html  sa.min.js  sha1.txt
weave_query/weave_query/monitoring/: __init__.py  langchain.py  monitor.py
weave_query/weave_query/ops_arrow/: __init__.py  arraylist_ops.py  boolean.py  convert_ops.py  date.py  dict.py  list_join.py  list_ops.py  (+8 more)
(+57380 files in other folders)
