[project]
name = "weave"
description = "A toolkit for building composable interactive data driven applications."
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [{ name = "W&B", email = "support@wandb.com" }]
authors = [
  { name = "Shawn Lewis", email = "shawn@wandb.com" },
  { name = "Tim Sweeney", email = "tim@wandb.com" },
  { name = "Nick Peneranda", email = "nick.penaranda@wandb.com" },
  { name = "Jeff Raubitschek", email = "jeff@wandb.com" },
  { name = "Jamie Rasmussen", email = "jamie.rasmussen@wandb.com" },
  { name = "Griffin Tarpenning", email = "griffin.tarpenning@wandb.com" },
  { name = "Josiah Lee", email = "josiah.lee@wandb.com" },
  { name = "Andrew Truong", email = "andrew@wandb.com" },
  { name = "Niall McQuay", email = "niall.mcquay@wandb.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Flask",
  "Framework :: Jupyter",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Database :: Front-Ends",
  "Topic :: Office/Business :: Financial :: Spreadsheet",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Widget Sets",
]
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
  "pydantic>=2.0.0",
  "wandb>=0.17.1",
  "packaging>=21.0",         # For version parsing in integrations
  "tenacity>=8.3.0,!=8.4.0", # Excluding 8.4.0 because it had a bug on import of AsyncRetrying
  "emoji>=2.12.1",           # For emoji shortcode support in Feedback
  "uuid-utils>=0.9.0",       # Used for ID generation - remove once python's built-in uuid supports UUIDv7
  "numpy>1.21.0",            # Used in box.py and scorer.py (should be made optional)
  "rich",                    # Used for special formatting of tables (should be made optional)
  "gql[aiohttp,requests]",   # Used exclusively in wandb_api.py
  "jsonschema>=4.23.0",      # Used by scorers for field validation
  "diskcache==5.6.3",        # Used for data caching
  "nest-asyncio==1.6.0",     # Used to support nested event loops in asyncio

  # This dependency will be updated each time we regenerate the trace server bindings.
  # 1. For normal dev, pin to a SHA and allow direct references.  This will look like:
  #    weave_server_sdk @ git+https://github.com/wandb/weave-stainless@daf91fdd07535c570eb618b343e2d125f9b09e25
  # 2. For deploys, pin to a specific version and remove allow-direct-references.  This will look like:
  #    weave_server_sdk==0.0.1

  # TODO: Uncomment when ready to commit to the new bindings.
  # "weave_server_sdk @ git+https://github.com/wandb/weave-stainless@9f62f9b3422d2afa7ad56f853ff510a81c1abb73",
]

[project.optional-dependencies]
# `trace_server` is the dependency list of the trace server itself. We eventually will extract
# this to a separate package. Note, when that happens, we will need to pull along some of the
#default dependencies as well.
trace_server = [
  "ddtrace>=2.7.0",
  # BYOB - S3
  "boto3>=1.34.0",
  # BYOB - Azure
  "azure-storage-blob>=12.24.0",
  # BYOB - GCP
  "google-cloud-storage>=2.7.0",
  # LLM Support
  "litellm>=1.36.1",
  # OTEL trace support
  "opentelemetry-proto>=1.12.0",
  "opentelemetry-semantic-conventions-ai>=0.4.3",
  "openinference-semantic-conventions>=0.1.17",
]
trace_server_tests = [
  # BYOB - S3
  "moto[s3]>=5.0.0",
]
docs = [
  "playwright",
  "lazydocs",
  "nbformat",
  "nbconvert",
  "weave[trace_server]",
]
# Pin until next release with pillow version bump: https://github.com/Zulko/moviepy/commit/e9559d8c3ebf12bb6986a2ba26a85b04dd335dd6
video_support = ["moviepy<=1.0.3", "pillow"]
anthropic = ["anthropic>=0.18.0"]
cerebras = ["cerebras-cloud-sdk"]
cohere = ["cohere>=5.9.1,<5.9.3"]
# Pin until https://github.com/crewAIInc/crewAI/pull/2553 is released
crewai = ["crewai>=0.100.1,<=0.108.0", "crewai-tools>=0.38.0"]
dspy = ["dspy>=2.6.3", "litellm<=1.61.6"]
google_ai_studio = ["google-generativeai>=0.8.3"]
google_genai = ["google-genai>=1.0.0", "pillow>=11.1.0"]
groq = ["groq>=0.13.0"]
huggingface = ["huggingface-hub>=0.28.1"]
instructor = [
  "instructor>=1.4.3,<1.7.0; python_version <= '3.9'",
  "instructor>=1.4.3; python_version > '3.9'",
  "google-genai>=1.5.0",
]
langchain = [
  "langchain-core>=0.2.1",
  "langchain-openai>=0.1.7",
  "langchain-community>=0.2.1",
  "chromadb>=0.5.0",
  "pysqlite3",
  "opentelemetry-exporter-otlp",
]
langchain_nvidia_ai_endpoints = [
  "langchain-core>=0.2.1",
  "langchain-nvidia-ai-endpoints",
]
litellm = ["litellm>=1.36.1"]
# temporary max pin b/c 0.12.0 changes call structure and therefor tests
llamaindex = ["llama-index>=0.10.35,<0.12.0"]
mistral0 = ["mistralai>=0.1.8,<1.0.0"]
mistral1 = ["mistralai>=1.0.0"]
scorers = [
  "Levenshtein>=0.26.0",
  "litellm>=1.58",
  "sentence-transformers>=3.3.1",
  "scikit-learn>=1.5.2",
  "transformers>=4.51.1",
  "torch>=2.4.1",
  "sentencepiece>=0.2.0",
  "pip>=20.0",                    # this is needed for presidio-analyzer to pull the spacy models
  "presidio-analyzer>=2.2.0",
  "presidio-anonymizer>=2.2.0",
]
notdiamond = ["notdiamond>=0.3.21", "litellm<=1.49.1"]
openai = ["openai>=1.0.0"]
openai_agents = ["openai-agents>=0.0.4"]
pandas-test = ["pandas>=2.2.3"]
presidio = ["presidio-analyzer==2.2.357", "presidio-anonymizer==2.2.357"]
modal = ["modal", "python-dotenv"]
mcp = ["mcp[cli]>=1.6.0"]
vertexai = ["vertexai>=1.70.0", "shapely<=2.0.6"] # shapely is busted on 2.0.7
bedrock = ["boto3", "moto[bedrock]>=5.0.24"]
test = [
  "nox",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.6",
  "pytest-cov>=5.0.0",
  "pytest-xdist>=3.1.0",
  "pytest-rerunfailures>=12.0",
  "pytest-rerunfailures>=14.0",
  "clickhouse_connect==0.7.0",
  "fastapi>=0.110.0",
  "sqlparse==0.5.0",

  # Integration Tests
  "pytest-recording>=0.13.2",
  "vcrpy>=7.0.0",

  # serving tests
  "flask",
  "uvicorn>=0.27.0",
  "pillow",
  "moviepy<=1.0.3",
  "filelock",
  "httpx",

  "weave[trace_server]",
  "weave[trace_server_tests]",
]
dev = [
  # codegen
  "tomlkit",
  "python-multipart",

]

[project.urls]
Company = "https://wandb.com"
Documentation = "https://docs.wandb.com/"
Changes = "https://github.com/wandb/weave/releases"
"Source Code" = "https://github.com/wandb/weave"
"Issue Tracker" = "https://github.com/wandb/weave/issues/"
Twitter = "https://twitter.com/weights_biases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "weave/version.py"

[tool.hatch.build]
include = ["weave"]
exclude = [
  "weave_query",
  "weave-js",
  "examples",
  "tests",
  "docs",
  "dev_docs",
  "weave/clear_cache.py",
]

# [tool.hatch.metadata]
# allow-direct-references = true
[tool.pytest.ini_options]
filterwarnings = [
  # treat warnings as errors
  # "error",
  # ignore deprecation warnings from installed packages, they're printed at the
  # bottom of test output, making it hard to find the actual errors.
  "ignore::DeprecationWarning",
]
addopts = "-v"
markers = [
  "skip_clickhouse_client: marks tests as requiring clickhouse client to be skipped",
  "weave_client: alias for `client` fixture used for CI dispatching. Do not use directly in code.",
  "disable_logging_error_check: means that the test expects logging errors (and the default assertion for no logging errors will fail)",
]

[tool.ruff.lint]
preview = true
select = [
  "D200",   # https://docs.astral.sh/ruff/rules/fits-on-one-line/
  "D201",   # https://docs.astral.sh/ruff/rules/no-blank-line-before-function/
  "D202",   # https://docs.astral.sh/ruff/rules/no-blank-line-after-function/
  "D204",   # https://docs.astral.sh/ruff/rules/one-blank-line-after-class/
  "D210",   # https://docs.astral.sh/ruff/rules/surrounding-whitespace/
  "D211",   # https://docs.astral.sh/ruff/rules/blank-line-before-class/
  "D214",   # https://docs.astral.sh/ruff/rules/section-not-over-indented/
  "FIX001", # https://beta.ruff.rs/docs/rules/#flake8-fixme-fix
  "FIX003", # https://docs.astral.sh/ruff/rules/line-contains-xxx/
  "F541",   # https://docs.astral.sh/ruff/rules/f-string-missing-placeholders/
  "I",      # https://docs.astral.sh/ruff/rules/#isort-i
  "W",      # https://docs.astral.sh/ruff/rules/#warning-w
  "F401",   # https://docs.astral.sh/ruff/rules/unused-import/
  "TID252", # https://docs.astral.sh/ruff/rules/relative-imports/#relative-imports-tid252
  "UP",     # https://docs.astral.sh/ruff/rules/#pyupgrade-up
  "TRY002", # https://docs.astral.sh/ruff/rules/raise-vanilla-class/
  "TRY004", # https://docs.astral.sh/ruff/rules/type-check-without-type-error/
  "TRY300", # https://docs.astral.sh/ruff/rules/try-consider-else/
  "TRY400", # https://docs.astral.sh/ruff/rules/error-instead-of-exception/
  "C",      # https://docs.astral.sh/ruff/rules/#convention-c
]
ignore = [
  # we use Google style
  "D203", # https://docs.astral.sh/ruff/rules/one-blank-line-before-class/
  "D213", # https://docs.astral.sh/ruff/rules/multi-line-summary-second-line/
  "D215", # https://docs.astral.sh/ruff/rules/section-underline-not-over-indented/

  # This is a more involved change, so disabling for now.
  "C901", # https://docs.astral.sh/ruff/rules/complex-structure/
]
exclude = ["weave_query"]

[tool.ruff.lint.isort]
known-third-party = ["wandb", "weave_query"]

[tool.ruff]
line-length = 88
show-fixes = true
exclude = ["weave_query"]

[tool.pyright]
include = ["weave"]
exclude = ["weave_query", "tests", "examples", "docs", "noxfile.py"]
# In cases where we support multiple versions of an integration, some imports can be missing
reportMissingImports = false

# TODO: Gradually remove as we improve our code!
reportAttributeAccessIssue = false
reportPossiblyUnboundVariable = false
reportOptionalMemberAccess = false
reportArgumentType = false
reportCallIssue = false

[tool.mypy]
warn_unused_configs = true
# Note: You have to update .pre-commit-config.yaml too!
exclude = [".*pyi$", "weave_query", "tests", "examples"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "weave.*"
disallow_untyped_defs = true
disallow_untyped_calls = true

[[tool.mypy.overrides]]
module = "weave_query.*"
ignore_errors = true

[tool.bumpversion]
current_version = "0.51.45"
parse = """(?x)
    (?P<major>0|[1-9]\\d*)\\.
    (?P<minor>0|[1-9]\\d*)\\.
    (?P<patch>0|[1-9]\\d*)
    (?:
        -                             # dash separator for pre-release section
        (?P<pre_l>[a-zA-Z-]+)         # pre-release label
        (?P<pre_n>0|[1-9]\\d*)        # pre-release version number
    )?                                # pre-release section is optional
"""
serialize = [
  "{major}.{minor}.{patch}-{pre_l}{pre_n}",
  "{major}.{minor}.{patch}",
]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Release version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Release version: {current_version} → {new_version}"
commit_args = ""

[tool.bumpversion.parts.pre_l]
values = ["dev", "final"]
optional_value = "final"

[tool.typos.default.extend-words]
fasion = "fasion" # Wandb lore
