[project]
name = "weave"
description = "A toolkit for building composable interactive data driven applications."
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [{ name = "W&B", email = "support@wandb.com" }]
authors = [
  { name = "Shawn Lewis", email = "shawn@wandb.com" },
  { name = "Tim Sweeney", email = "tim@wandb.com" },
  { name = "Nick Peneranda", email = "nick.penaranda@wandb.com" },
  { name = "Jeff Raubitschek", email = "jeff@wandb.com" },
  { name = "Jamie Rasmussen", email = "jamie.rasmussen@wandb.com" },
  { name = "Griffin Tarpenning", email = "griffin.tarpenning@wandb.com" },
  { name = "Josiah Lee", email = "josiah.lee@wandb.com" },
  { name = "Andrew Truong", email = "andrew@wandb.com" },
  { name = "Niall McQuay", email = "niall.mcquay@wandb.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Flask",
  "Framework :: Jupyter",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Database :: Front-Ends",
  "Topic :: Office/Business :: Financial :: Spreadsheet",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Widget Sets",
]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
  "wandb>=0.17.1",
  "sentry-sdk>=2.0.0,<3.0.0",
  "pydantic>=2.0.0",
  "packaging>=21.0",                      # For version parsing in integrations
  "tenacity>=8.3.0,!=8.4.0",              # Excluding 8.4.0 because it had a bug on import of AsyncRetrying
  "click",                                # Used for terminal/stdio printing
  "gql[httpx]>=3.0.0",                    # Used exclusively in wandb_api.py; httpx is used for HTTP requests throughout the codebase
  "jsonschema>=4.23.0",                   # Used by scorers for field validation
  "diskcache==5.6.3",                     # Used for data caching
  "tzdata; platform_system == 'Windows'", # Required for timezone support on Windows

  # Used for content type detection
  # Remove once license content filtering is upstreamed
  "polyfile-weave",
]

[project.optional-dependencies]
wandb = ["wandb>=0.17.1"]
rich = ["rich"]           # Optional dependency for enhanced console output

# DO NOT MODIFY THE STAINLESS DEPENDENCY GROUP MANUALLY. IT IS AUTO-GENERATED BY THE CODE GENERATOR.
# 1. For normal dev, pin to a SHA and allow direct references.  This will look like:
#    weave_server_sdk @ git+https://github.com/wandb/weave-stainless@daf91fdd07535c570eb618b343e2d125f9b09e25
# 2. For deploys, pin to a specific version and remove allow-direct-references.  This will look like:
#    weave_server_sdk==0.0.1
# stainless = [
#   "weave_server_sdk @ git+https://github.com/wandb/weave-stainless.git@9ce4f0792a54f05fba22531faee0c439ae9d70fa",
# ]

# `trace_server` is the dependency list of the trace server itself. We eventually will extract
# this to a separate package. Note, when that happens, we will need to pull along some of the
# default dependencies as well.
trace_server = [
  "ddtrace>=2.7.0",
  # BYOB - S3
  "boto3>=1.34.0",
  # BYOB - Azure
  "azure-storage-blob>=12.24.0,<12.26.0",
  # BYOB - GCP
  "google-cloud-storage>=2.7.0",
  # LLM Support
  "litellm>=1.36.1",
  # OTEL trace support
  "opentelemetry-proto>=1.12.0",
  "opentelemetry-semantic-conventions-ai>=0.4.3",
  "openinference-semantic-conventions>=0.1.17",
  # For emoji shortcode support in Feedback
  "emoji>=2.12.1",
]
video_support = ["moviepy<=1.0.3"]
anthropic = ["anthropic>=0.18.0"]
cerebras = ["cerebras-cloud-sdk"]
cohere = ["cohere>=5.13.5"]
# Pin until https://github.com/crewAIInc/crewAI/pull/2553 is released
crewai = [
  "crewai>=0.100.1,<=0.108.0; python_version >= '3.10' and python_version <= '3.13' and platform_python_implementation != 'PyPy'",
  "crewai-tools>=0.38.0; python_version >= '3.10' and python_version <= '3.13' and platform_python_implementation != 'PyPy'",
  "openai>=1.99.9,<1.100.0",
]
dspy = ["dspy>=3.0.0; python_version >= '3.10'"]
google_genai = [
  "google-genai>=1.0.0,<=1.23.0; python_version >= '3.10'",
  "pillow>=11.1.0",
]
groq = ["groq>=0.13.0"]
huggingface = ["huggingface-hub>=0.28.1"]
smolagents = [
  "openai>=1.99.9,<1.100.0",
  "litellm>=1.58; python_version >= '3.10'",
  "smolagents>=1.17.0,<1.19.0; python_version >= '3.10'",
  "huggingface-hub>=0.28.1,<1.0.0",
  "SQLAlchemy>=2.0.38",
]
instructor = [
  "instructor>=1.4.3,<1.11.0",
  "google-genai>=1.5.0",
  "openai>=1.99.9,<1.100.0",
]
langchain = [
  "langchain-core>=0.2.1; python_version >= '3.10'",
  "langchain-openai>=0.1.7; python_version >= '3.10'",
  "langchain-community>=0.2.1; python_version >= '3.10'",
  "langchain-google-vertexai>=2.0.24; platform_python_implementation != 'PyPy' and python_version >= '3.10'",
  "langchain-google-genai>=2.1.5; python_version >= '3.10'",
  "langchain-anthropic>=0.3.15; python_version >= '3.10'",
  "langchain-cohere>=0.4.5; python_version >= '3.10'",
  "langchain-litellm>=0.2.2; python_version >= '3.10'",
  "chromadb>=0.5.0; python_version >= '3.10'",
  "pysqlite3; platform_system == 'Linux' and python_version >= '3.10'",
  "opentelemetry-exporter-otlp; python_version >= '3.10'",
  "openai>=1.99.9,<1.100.0",
]
langchain_nvidia_ai_endpoints = [
  "langchain-core>=0.2.1",
  "langchain-nvidia-ai-endpoints",
]
litellm = ["litellm>=1.36.1", "openai>=1.99.9,<1.100.0"]
# temporary max pin b/c 0.12.50 changes call structure and therefor tests
llamaindex = ["llama-index>=0.10.35", "openai>=1.99.9,<1.100.0"]
mistral = ["mistralai>=1.0.0"]
scorers = [
  "numpy>1.21.0",
  "Levenshtein>=0.26.0",
  "litellm>=1.58",
  "sentence-transformers>=3.3.1",
  "scikit-learn>=1.5.2",
  "transformers>=4.51.1",
  "torch>=2.4.1",
  "sentencepiece>=0.2.0",
  "pip>=20.0",                    # this is needed for presidio-analyzer to pull the spacy models
  "presidio-analyzer>=2.2.0",
  "presidio-anonymizer>=2.2.0",
  "huggingface_hub>=0.28.1",
]
notdiamond = [
  "notdiamond>=0.4.9; platform_python_implementation != 'PyPy' and python_version > '3.10' and python_version < '3.13'",
  "pandas>=2.0.0",
]
openai = ["openai>=1.99.9,<1.100.0"]
openai_agents = ["openai-agents>=0.0.4"]
presidio = [
  "presidio-analyzer==2.2.357; python_version < '3.13'",
  "presidio-anonymizer==2.2.357; python_version < '3.13'",
]
modal = ["modal", "python-dotenv"]
mcp = ["mcp[cli]>=1.6.0,<1.10.0; python_version >= '3.10'"]
vertexai = [
  "vertexai>=1.70.0; platform_python_implementation != 'PyPy' and python_version < '3.13'",
  "shapely<=2.0.6; platform_python_implementation != 'PyPy'",
] # shapely is busted on 2.0.7
bedrock = ["boto3", "moto[bedrock]>=5.0.24"]
verdict = [
  "verdict>=0.2.3; platform_python_implementation != 'PyPy' and python_version < '3.13'",
]
autogen = ["autogen-agentchat>=0.5.7; python_version >= '3.10'"]
verifiers = ["verifiers>=0.1.3.post0,<0.1.4; python_version >= '3.11'"]


[project.urls]
Company = "https://wandb.com"
Documentation = "https://docs.wandb.com/"
Changes = "https://github.com/wandb/weave/releases"
"Source Code" = "https://github.com/wandb/weave"
"Issue Tracker" = "https://github.com/wandb/weave/issues/"
Twitter = "https://twitter.com/weights_biases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "weave/version.py"

[tool.hatch.build]
include = ["weave"]
exclude = [
  "examples",
  "tests",
  "dev_docs",
  "weave/trace_server/model_providers",
]

[tool.hatch.metadata]
allow-direct-references = true
[tool.pytest.ini_options]
filterwarnings = [
  # treat warnings as errors
  # "error",
  # ignore deprecation warnings from installed packages, they're printed at the
  # bottom of test output, making it hard to find the actual errors.
  "ignore::DeprecationWarning",
]
addopts = "-v"
markers = [
  "skip_clickhouse_client: marks tests as requiring clickhouse client to be skipped",
  "trace_server: alias for `trace_server` fixture used for CI dispatching. Do not use directly in code.",
  "disable_logging_error_check: means that the test expects logging errors (and the default assertion for no logging errors will fail)",
  "remote_only: marks tests that only run with --remote-http-trace-server=remote",
  "stainless_only: marks tests that only run with --remote-http-trace-server=stainless",
]

[tool.ruff.lint]
preview = true
select = [
  "B", # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
  "D", # https://docs.astral.sh/ruff/rules/#pydoclint-doc
  #
  "FIX001",  # https://beta.ruff.rs/docs/rules/#flake8-fixme-fix
  "FIX003",  # https://docs.astral.sh/ruff/rules/line-contains-xxx/
  "F541",    # https://docs.astral.sh/ruff/rules/f-string-missing-placeholders/
  "I",       # https://docs.astral.sh/ruff/rules/#isort-i
  "W",       # https://docs.astral.sh/ruff/rules/#warning-w
  "F401",    # https://docs.astral.sh/ruff/rules/unused-import/
  "F402",    # https://docs.astral.sh/ruff/rules/import-shadowed-by-loop-var/
  "F6",      # https://docs.astral.sh/ruff/rules/multi-value-repeated-key-literal/
  "F811",    # https://docs.astral.sh/ruff/rules/redefined-while-unused/
  "F821",    # https://docs.astral.sh/ruff/rules/undefined-name/
  "F822",    # https://docs.astral.sh/ruff/rules/undefined-export/
  "TID252",  # https://docs.astral.sh/ruff/rules/relative-imports/#relative-imports-tid252
  "UP",      # https://docs.astral.sh/ruff/rules/#pyupgrade-up
  "TRY002",  # https://docs.astral.sh/ruff/rules/raise-vanilla-class/
  "TRY004",  # https://docs.astral.sh/ruff/rules/type-check-without-type-error/
  "TRY300",  # https://docs.astral.sh/ruff/rules/try-consider-else/
  "TRY400",  # https://docs.astral.sh/ruff/rules/error-instead-of-exception/
  "TRY401",  # https://docs.astral.sh/ruff/rules/verbose-log-message/
  "C",       # https://docs.astral.sh/ruff/rules/#convention-c
  "T201",    # https://docs.astral.sh/ruff/rules/print-statement/
  "SIM102",  # https://docs.astral.sh/ruff/rules/collapsible-if/,
  "N801",    # https://docs.astral.sh/ruff/rules/invalid-class-name/
  "N802",    # https://docs.astral.sh/ruff/rules/invalid-function-name/
  "N803",    # https://docs.astral.sh/ruff/rules/invalid-argument-name/
  "N804",    # https://docs.astral.sh/ruff/rules/non-lowercase-variable-in-class/
  "N805",    # https://docs.astral.sh/ruff/rules/invalid-first-argument-name-for-method/
  "N806",    # https://docs.astral.sh/ruff/rules/non-lowercase-variable-in-function/
  "PERF102", # https://docs.astral.sh/ruff/rules/incorrect-dict-iterator/
  "T20",     # https://docs.astral.sh/ruff/rules/#flake8-print-t20
  "PT001",   # https://docs.astral.sh/ruff/rules/pytest-fixture-incorrect-parentheses-style/
  "PT006",   # https://docs.astral.sh/ruff/rules/pytest-parametrize-names-wrong-type/
  "PT008",   # https://docs.astral.sh/ruff/rules/pytest-parametrize-values-wrong-type/
  "PT018",   # https://docs.astral.sh/ruff/rules/pytest-composite-assertion/
  "PT022",   # https://docs.astral.sh/ruff/rules/pytest-useless-yield-fixture/
  "PT023",   # https://docs.astral.sh/ruff/rules/pytest-incorrect-mark-parentheses-style/
  "RUF010",  # https://docs.astral.sh/ruff/rules/explicit-f-string-type-conversion/
  "RUF012",  # https://docs.astral.sh/ruff/rules/mutable-class-default/
  "RUF013",  # https://docs.astral.sh/ruff/rules/implicit-optional/
  "RUF015",  # https://docs.astral.sh/ruff/rules/unnecessary-iterable-allocation-for-first-element/
  "RUF018",  # https://docs.astral.sh/ruff/rules/assignment-in-assert/
  "RUF022",  # https://docs.astral.sh/ruff/rules/unsorted-dunder-all/
  "RUF031",  # https://docs.astral.sh/ruff/rules/incorrectly-parenthesized-tuple-in-subscript/
  "RUF039",  # https://docs.astral.sh/ruff/rules/unraw-re-pattern/
  "RUF046",  # https://docs.astral.sh/ruff/rules/unnecessary-cast-to-int/
  "RUF047",  # https://docs.astral.sh/ruff/rules/needless-else/
  "RUF052",  # https://docs.astral.sh/ruff/rules/used-dummy-variable/
  "RUF059",  # https://docs.astral.sh/ruff/rules/unused-unpacked-variable/
  "RUF100",  # https://docs.astral.sh/ruff/rules/unused-noqa/
  "E711",    # https://docs.astral.sh/ruff/rules/none-comparison/
  "E713",    # https://docs.astral.sh/ruff/rules/not-in-test/
  "PYI019",  # https://docs.astral.sh/ruff/rules/custom-type-var-for-self/
]
ignore = [
  # Fix these when possible.  They are formatting changes related to the docs!
  "D10",
  "D205",
  "D414",
  "D415",
  "D417",
  # This is a more involved change, so disabling for now.
  "C901", # https://docs.astral.sh/ruff/rules/complex-structure/
]

[tool.ruff.lint.isort]
known-third-party = ["wandb"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-pytest-style]
mark-parentheses = false
fixture-parentheses = false

[tool.ruff]
line-length = 88
show-fixes = true
exclude = ["rules"]

[tool.ruff.lint.per-file-ignores]
"!/weave/trace/**/*.py" = ["T201"]
"!/tests/**/*.py" = ["RUF059"]

[tool.pyright]
include = ["weave"]
exclude = ["tests", "examples", "docs", "noxfile.py"]
# In cases where we support multiple versions of an integration, some imports can be missing
reportMissingImports = false

# TODO: Gradually remove as we improve our code!
reportAttributeAccessIssue = false
reportPossiblyUnboundVariable = false
reportOptionalMemberAccess = false
reportArgumentType = false
reportCallIssue = false

[tool.mypy]
warn_unused_configs = true
# Note: You have to update .pre-commit-config.yaml too!
exclude = [".*pyi$", "tests", "examples"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "weave.*"
disallow_untyped_defs = true
disallow_untyped_calls = true

[tool.bumpversion]
current_version = "0.52.23"
parse = """(?x)
    (?P<major>0|[1-9]\\d*)\\.
    (?P<minor>0|[1-9]\\d*)\\.
    (?P<patch>0|[1-9]\\d*)
    (?:
        -                             # dash separator for pre-release section
        (?P<pre_l>[a-zA-Z-]+)         # pre-release label
        (?P<pre_n>0|[1-9]\\d*)        # pre-release version number
    )?                                # pre-release section is optional
"""
serialize = [
  "{major}.{minor}.{patch}-{pre_l}{pre_n}",
  "{major}.{minor}.{patch}",
]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Release version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Release version: {current_version} → {new_version}"
commit_args = ""

[tool.bumpversion.parts.pre_l]
values = ["dev", "final"]
optional_value = "final"

[tool.typos.default.extend-words]
fasion = "fasion" # Wandb lore

[tool.typos.default.extend-identifiers]
alog_score = "alog_score"
BoxedNDArray = "BoxedNDArray"

[tool.fixit]
enable = [".rules.op_deco", ".rules.legacy_methods"]
disable = ["fixit.rules"]

[dependency-groups]
dev = [
  # codegen
  "tomlkit",
  "python-multipart",
  # linting
  "pre-commit",
  "jupyter",
  "ty>=0.0.2",
]
trace_server = [
  # Same dependencies as the trace_server optional dependency, but as a dependency group for tests
  "ddtrace>=2.7.0",
  # BYOB - S3
  "boto3>=1.34.0",
  # BYOB - Azure
  "azure-storage-blob>=12.24.0,<12.26.0",
  # BYOB - GCP
  "google-cloud-storage>=2.7.0",
  # LLM Support
  "litellm>=1.36.1",
  # OTEL trace support
  "opentelemetry-proto>=1.12.0",
  "opentelemetry-semantic-conventions-ai>=0.4.3",
  "openinference-semantic-conventions>=0.1.17",
  # For emoji shortcode support in Feedback
  "emoji>=2.12.1",
]
trace_server_tests = [
  # BYOB - S3
  "moto[s3]>=5.0.0",
  "openai<1.100.0",
]
autogen_tests = [
  "autogen-agentchat>=0.5.7; python_version >= '3.10'",
  "autogen-ext[openai]>=0.5.7; python_version >= '3.10'",
  "openai>=1.99.9,<1.100.0",
]
verifiers_test = [
  "verifiers>=0.1.3.post0,<0.1.4; python_version >= '3.11'",
  "huggingface_hub>=0.34.6",
  "datasets>=4.1.0",
]
pandas_test = ["pandas>=2.2.3"]
test = [
  "nox",
  "pytest>=8.2.0; platform_python_implementation != 'PyPy'",
  "pytest-asyncio>=0.23.6",
  "pytest-cov>=5.0.0",
  "pytest-xdist>=3.1.0",
  "pytest-rerunfailures>=14.0",
  "pytest-shard==0.1.2",
  "clickhouse_connect==0.7.0",
  "fastapi>=0.110.0",
  "sqlparse==0.5.0",
  "freezegun",
  "rich",

  # Integration Tests
  "pytest-recording>=0.13.2",
  "vcrpy>=7.0.0; platform_python_implementation != 'PyPy'",

  # serving tests
  "flask",
  "uvicorn>=0.27.0",
  "pillow",
  "moviepy<=1.0.3",
  "filelock",

  # Media Generation
  "opencv-python", # Video generation
  "reportlab",     # PDF generation

  "confluent-kafka",

  "weave[trace_server]",
  "moto[s3]>=5.0.0",
  "respx",
]

[tool.uv]
# Limit environments to CPython only (exclude PyPy) to avoid validation issues
# uv sync validates all environments, so we need to exclude PyPy which has many incompatibilities
environments = ["platform_python_implementation == 'CPython'"]

# Declare conflicts between optional dependencies that have incompatible requirements
# This allows uv sync to work correctly by not validating conflicting extras together
conflicts = [
  # crewai and dspy have incompatible litellm version requirements
  [
    { extra = "crewai" },
    { extra = "dspy" },
  ],
  # langchain and vertexai have incompatible google-cloud-aiplatform requirements
  [
    { extra = "langchain" },
    { extra = "vertexai" },
  ],
  # crewai and langchain have incompatible litellm version requirements
  [
    { extra = "crewai" },
    { extra = "langchain" },
  ],
  # crewai and instructor have incompatible httpx version requirements
  [
    { extra = "crewai" },
    { extra = "instructor" },
  ],
  # crewai and scorers have incompatible crewai-tools version requirements
  [
    { extra = "crewai" },
    { extra = "scorers" },
  ],
]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:", "@abstractmethod"]
omit = ["weave/agent/**"]

[tool.ty.src]
include = ["weave"]
exclude = ["tests", "examples", "pyproject.toml"]

[tool.ty.environment]
python-version= "3.10"

[tool.ty.rules]
# These are ignored for the sake of getting the type checker added.
# We should be dilligent in removing these ignores over time.
invalid-assignment = "ignore"
possibly-missing-attribute = "ignore"
unresolved-import = "ignore"
call-non-callable = "ignore"
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
redundant-cast = "ignore"
invalid-method-override = "ignore"
deprecated = "ignore"
missing-typed-dict-key = "ignore"
invalid-return-type = "ignore"
unknown-argument = "ignore"
missing-argument = "ignore"
non-subscriptable = "ignore"
unsupported-operator = "ignore"
no-matching-overload = "ignore"
possibly-missing-import = "ignore"
too-many-positional-arguments = "ignore"
not-iterable = "ignore"